[package]
name = "dmds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
async-lock = "3.1"
async-trait = "0.1"
async-executor = "1.6"
futures-lite = "2.0"
pin-project-lite = "0.2"
bytes = "1.5"
dashmap = "5.5"
