[package]
name = "dmds"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Multidimensional database implemented in Rust"
repository = "https://github.com/DM-Earth/dmds"
license = "LGPL-3.0-or-later"
keywords = ["db", "database", "mdb"]
categories = ["database", "database-implementations", "asynchronous"]
readme = "readme.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
async-lock = "3.1"
async-trait = "0.1"
futures-lite = "2.0"
bytes = "1.5"
dashmap = "5.5"

[workspace]
resolver = "2"
members = ["tokio-fs"]
