[package]
name = "dmds-tokio-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmds = { path = "../" }
async-trait = "0.1"
tokio = { version = "1.34", features = ["fs", "io-util", "time", "rt"] }
futures = { version = "0.3", features = ["executor"] }
dashmap = "5.5"
bytes = "1.5"
