[package]
name = "dmds-tokio-fs"
version = "0.3.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Dmds I/O handler interacts with the filesystem using Tokio"
repository = "https://github.com/DM-Earth/dmds"
license = "LGPL-3.0-or-later"
categories = ["asynchronous"]
readme = "readme.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmds = "0.4"
tokio = { version = "1.37", features = ["fs", "io-util", "time", "rt"] }
futures = { version = "0.3", features = ["executor"] }
dashmap = "6.0"
bytes = "1.6"
